Feature/doom8088 (#2)
* add 4 raw images

* LMP files are binary

* remove unused lumps

* use getResourceAsStream() so resources can be read from inside the jar

* remove unused lumps

* smaller Line size

* process sprites

* process walls

* roundUp4 -> 2, because 32-bit -> 16-bit

* replace credits

* update README.md